lib/winterp/c/winterp.h

#define Complex std::complex<double>
#define Complex double complex
/**********************************************************************/
/***************************** DEFINITIONS ****************************/
/**********************************************************************/


/**
 * Function changing the lattice resolution, while keeping fixed volume
 * @see README.md#lattice-interpolation-to-a-new-resolution
 * */ 

int winterp_interpolation_1dr(int nxi, double *funIn, int nxo, double *funOut);
int winterp_interpolation_1dv(int nxi, double *funIn, int nxo, double *funOut);
int winterp_interpolation_1dc(int nxi, Complex *funIn, int nxo, Complex *funOut);
int winterp_interpolation_1d(char type, int nxi, void *funIn, int nxo, void *funOut);
int winterp_interpolation_2dr(int nxi, int nyi, double *funIn, int nxo, int nyo, double *funOut);
int winterp_interpolation_2dv(int nxi, int nyi, double *funIn, int nxo, int nyo, double *funOut);
int winterp_interpolation_2dc(int nxi, int nyi, Complex *funIn, int nxo, int nyo, Complex *funOut);
int winterp_interpolation_2d(char type, int nxi, int nyi, void *funIn, int nxo, int nyo, void *funOut);
int winterp_interpolation_3dr(int nxi, int nyi, int nzi, double *funIn, int nxo, int nyo, int nzo, double *funOut);
int winterp_interpolation_3dv(int nxi, int nyi, int nzi, double *funIn, int nxo, int nyo, int nzo, double *funOut);
int winterp_interpolation_3dc(int nxi, int nyi, int nzi, Complex *funIn, int nxo, int nyo, int nzo, Complex *funOut);
  
int winterp_interpolation_3d(char type, int nxi, int nyi, int nzi, void *funIn, int nxo, int nyo, int nzo, void *funOut);
 


/**
 * Functions for extracting values for given point
 * @see README.md#interpolation-for-arbitrary-point-in-space
 * */

/**
 * Structure representing interpolator for arbitrary data type
 * */
typedef struct
{
    char datatype; // r-real, c-complex, v-vector
    int datadim; /// dimensonality of data
    int nx; /// lattice size
    int ny;
    int nz; 
    double dx; /// lattice spacing
    double dy;
    double dz; 
    Complex *datak; /// Fourier transform of data
} winterp_interpolator;
int winterp_create_interpolator_1d_c(int nx, double dx, Complex *data, winterp_interpolator *interp);
int winterp_create_interpolator_1d_r(int nx, double dx, double *data, winterp_interpolator *interp);
int winterp_create_interpolator_2d_c(int nx, int ny, double dx, double dy, Complex *data, winterp_interpolator *interp);
int winterp_create_interpolator_2d_r(int nx, int ny, double dx, double dy, double *data, winterp_interpolator *interp);
int winterp_create_interpolator_3d_c(int nx, int ny, int nz, double dx, double dy, double dz, Complex *data, winterp_interpolator *interp);
int winterp_create_interpolator_3d_r(int nx, int ny, int nz, double dx, double dy, double dz, double *data, winterp_interpolator *interp);
/**
 * Returns value of function for arbitrary point in 1D
 * @param interp interpolator of function (INPUT)
 * @param x point (INPUT)
 * @param val value of function (OUTPUT)
 * @return error code
 * */
int winterp_getvalue_1d_c(winterp_interpolator *interp, double x, Complex *val);
int winterp_getvalue_1d_r(winterp_interpolator *interp, double x, double *val);
/**
 * Returns value of function for arbitrary point in 2D
 * @param interp interpolator of function (INPUT)
 * @param x point (INPUT)
 * @param y point (INPUT)
 * @param val value of function (OUTPUT)
 * @return error code
 * */
int winterp_getvalue_2d_c(winterp_interpolator *interp, double x, double y, Complex *val);
int winterp_getvalue_2d_r(winterp_interpolator *interp, double x, double y, double *val);
/**
 * Returns value of function for arbitrary point in 3D
 * @param interp interpolator of function (INPUT)
 * @param x point (INPUT)
 * @param y point (INPUT)
 * @param z point (INPUT)
 * @param val value of function (OUTPUT)
 * @return error code
 * */
int winterp_getvalue_3d_c(winterp_interpolator *interp, double x, double y, double z, Complex *val);
int winterp_getvalue_3d_r(winterp_interpolator *interp, double x, double y, double z, double *val);
/**
 * Function destroys interolator and frees memory
 * */
int winterp_destroy_interpolator(winterp_interpolator *interp);